--- a/index.html
+++ b/index.html
@@ -11,21 +11,24 @@
         <div class="container">
             <article class="p-5">
                 <h1 class="m-5 text-center">Upload de arquivo</h1>
-                <form id="form-file" name="form-file" action="javascript:void(0);" method="post" enctype="multipart/form-data">
+                <form id="form-file" name="form-file" action="javascript:void(0);">
                     <div class="form-group">
                         <label for="file">Adicione um arquivo no(s) seguinte(s) formato(s); .txt</label>
                         <input type="file" class="form-control-file" id="file">
-                        <button type="submit" class="btn btn-primary btn-lg btn-block mt-3">Enviar</button>
+                        <button id="btn-submit" type="submit" class="mt-3 btn btn-primary btn-lg btn-block">
+                            <b class="text-uppercase">Enviar</b>
+                        </button>
                     </div>
                 </form>
                 <div class="progress">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+                    <div id="progress-bar" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
                 </div>
             </article>
         </div>
     </main>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script> 
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
